# ml-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
regression/: Readme.md  end_to_end_indian_house_rent_regression.ipynb
regression/data/: cities_magicbricks_rental_prices.csv
regression/deployment_demo/: app.py  index.html  streamlit_app.py
